--- a/src/VietIME.App/VietIME.App.csproj
+++ b/src/VietIME.App/VietIME.App.csproj
@@ -14,9 +14,9 @@
     <UseWindowsForms>true</UseWindowsForms>
     <AssemblyName>VietIME</AssemblyName>
     <Version>1.0.0</Version>
-    <Company>Do Nam</Company>
-    <Authors>Do Nam</Authors>
-    <Copyright>Copyright (c) 2024-2026 Do Nam. All rights reserved.</Copyright>
+    <Company>CVNSS4.0</Company>
+    <Authors>Long Ngo</Authors>
+    <Copyright>Copyright (c) 2020-2026 Long Ngo. All rights reserved.</Copyright>
     <Product>VietIME - Bo go tieng Viet</Product>
     <Description>Bo go tieng Viet cho Windows</Description>
     
