--- a/src/VietIME.Core/VietIME.Core.csproj
+++ b/src/VietIME.Core/VietIME.Core.csproj
@@ -4,6 +4,15 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+    <!-- CVNSS4.0 metadata -->
+    <Authors>Long Ngo</Authors>
+    <Company>CVNSS</Company>
+    <Product>VietIME CVNSS4.0</Product>
+    <Copyright>© Long Ngo, 2026</Copyright>
+
+    <VersionPrefix>4.0.0</VersionPrefix>
   </PropertyGroup>
 
 </Project>
+
