--- a/src/VietIME.App/VietIME.App.csproj
+++ b/src/VietIME.App/VietIME.App.csproj
@@ -1,38 +1,17 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
-  <ItemGroup>
-    <ProjectReference Include="..\VietIME.Core\VietIME.Core.csproj" />
-    <ProjectReference Include="..\VietIME.Hook\VietIME.Hook.csproj" />
-  </ItemGroup>
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
     <UseWPF>true</UseWPF>
-    <UseWindowsForms>true</UseWindowsForms>
-    <AssemblyName>VietIME</AssemblyName>
-    <Version>1.0.0</Version>
-    <Company>CVNSS4.0</Company>
-    <Authors>Long Ngo</Authors>
-    <Copyright>Copyright (c) 2020-2026 Long Ngo. All rights reserved.</Copyright>
-    <Product>VietIME - Bo go tieng Viet</Product>
-    <Description>Bo go tieng Viet cho Windows</Description>
-    
-    <!-- Icon -->
-    <ApplicationIcon>Assets\icon.ico</ApplicationIcon>
-    
-    <!-- Portable exe settings -->
-    <PublishSingleFile>true</PublishSingleFile>
-    <SelfContained>true</SelfContained>
-    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
-    <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
-    <EnableCompressionInSingleFile>true</EnableCompressionInSingleFile>
-  </PropertyGroup>
 
-  <ItemGroup>
-    <Content Include="Assets\icon.ico" />
-  </ItemGroup>
+    <ApplicationIcon>..\..\assets\cvnss-tray.ico</ApplicationIcon>
+
+    <Authors>Long Ngo</Authors>
+    <Company>CVNSS</Company>
+    <Product>VietIME CVNSS4.0</Product>
+    <Copyright>© Long Ngo, 2026</Copyright>
+
+    <VersionPrefix>4.0.0</VersionPrefix>
+  </PropertyGroup>
 
 </Project>
