--- a/src/VietIME.Core/VietIME.Core.csproj
+++ b/src/VietIME.Core/VietIME.Core.csproj
@@ -5,14 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 
-    <!-- CVNSS4.0 metadata -->
     <Authors>Long Ngo</Authors>
     <Company>CVNSS</Company>
     <Product>VietIME CVNSS4.0</Product>
     <Copyright>© Long Ngo, 2026</Copyright>
-
-    <VersionPrefix>4.0.0</VersionPrefix>
+    <Version>4.0.0</Version>
   </PropertyGroup>
 
 </Project>
-
