--- a/src/VietIME.Core/VietIME.Core.csproj
+++ b/src/VietIME.Core/VietIME.Core.csproj
@@ -1,15 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk"> 
 
-  <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+  <PropertyGroup> 
+    <TargetFramework>net8.0</TargetFramework> 
+    <ImplicitUsings>enable</ImplicitUsings> 
+    <Nullable>enable</Nullable> 
+  </PropertyGroup> 
 
-    <Authors>Long Ngo</Authors>
-    <Company>CVNSS</Company>
-    <Product>VietIME CVNSS4.0</Product>
-    <Copyright>© Long Ngo, 2026</Copyright>
-    <Version>1.0.0</Version>
-  </PropertyGroup>
-
-</Project>
+</Project> 
