--- a/.gitignore
+++ b/.gitignore
@@ -1,39 +1,7 @@
-# Build results
-[Bb]in/
-[Oo]bj/
-[Dd]ebug/
-[Rr]elease/
-publish/
-
-# Visual Studio
-.vs/
+bin/
+obj/
 *.user
 *.suo
-*.userosscache
-*.sln.docstates
-
-# NuGet
-*.nupkg
-**/packages/*
-!**/packages/build/
-
-# JetBrains Rider
-.idea/
-
-# VS Code
-.vscode/
-
-# Windows
-Thumbs.db
-ehthumbs.db
-Desktop.ini
-
-# macOS
-.DS_Store
-
-# Logs
+*.cache
 *.log
-
-# Test results
-[Tt]est[Rr]esult*/
-*.trx
+.vs/
