--- a/src/VietIME.App/VietIME.App.csproj
+++ b/src/VietIME.App/VietIME.App.csproj
@@ -1,17 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>WinExe</OutputType>
     <TargetFramework>net8.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
-
-    <ApplicationIcon>..\..\assets\cvnss-tray.ico</ApplicationIcon>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
 
     <Authors>Long Ngo</Authors>
     <Company>CVNSS</Company>
     <Product>VietIME CVNSS4.0</Product>
     <Copyright>© Long Ngo, 2026</Copyright>
-
-    <VersionPrefix>4.0.0</VersionPrefix>
+    <Version>4.0.0</Version>
   </PropertyGroup>
 
 </Project>
