--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,7 +13,9 @@ jobs:
     - run: dotnet restore
     - run: dotnet publish src/VietIME.App/VietIME.App.csproj -c Release -r win-x64 --self-contained true -o publish
     - run: choco install innosetup -y
-    - run: "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" installer.iss
+    - name: Build installer
+      run: |
+        & "C:\Program Files (x86)\Inno Setup 6\ISCC.exe" installer.iss
     - uses: actions/upload-artifact@v4
       with:
         name: VietIME-build
